# Repo_Mechanic

./: -files --others --exclude-standard  .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  ISSUES_SEED.md  LICENSE  README.md  ROADMAP.md  coverage.xml  pyproject.toml  runbook.txt  wizard+receipts.txt
.agents/: acceptance.md  constraints.md  milestones.md  project_brief.md  system.md  tools.md
.github/: release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  task.md
.github/workflows/: ci.yml  release-drafter.yml
bootstrap/: prompt.txt
docs/: RECORDING.md
fixtures/broken-calculator/calc/: __init__.py
fixtures/broken-calculator/tests/: conftest.py  test_calc.py
scripts/: demo.ps1  demo.sh
src/mechanic/: __init__.py  cli.py  config.py  failure_classifier.py  guards.py  patches.py  planner.py  receipts.py  sandbox.py
src/mechanic/tools/: black_tool.py  git_tool.py  pytest_tool.py  ruff_tool.py  shell.py  uv_tool.py
src/mechanic/ui/: __init__.py  receipts_html.py  tui.py  wizard.py
tasks/: 002_tool_registry.md  003_planner_mvp.md  004_patch_engine.md  005_receipts_and_docs.md
tests/: conftest.py  test_patches.py  test_receipts.py  test_receipts_errors.py
