[project]
name = "repo-mechanic"
version = "0.1.0"
description = "Local agentic code fixer CLI"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Repo Mechanic" }]
dependencies = [
  "typer>=0.12",
  "pytest>=7.0",
  "ruff>=0.5",
  "black>=24.0",
  "rich>=13.0",
  "markdown-it-py>=3.0",
]

[project.optional-dependencies]
tui = [
  "textual>=0.58",
]
dev = [
  "pre-commit>=3.5",
]

[project.scripts]
repo-mechanic = "mechanic.cli:app"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E", "F", "I", "UP"]
