[project]
name = "repo-mechanic"
version = "0.1.0"
description = "Local agentic code fixer CLI"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Repo Mechanic" }]
dependencies = [
  "typer>=0.12",
  "pytest>=7.0",
  "ruff>=0.5",
  "black>=24.0",
]

[project.scripts]
repo-mechanic = "mechanic.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E", "F", "I", "UP"]

